Overflow resolved

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -2,7 +2,7 @@
 
 @page {
   size: A4;
-  margin: 25px;
+  margin: 15px;
 }
 
 * {
@@ -22,14 +22,13 @@ body, html {
 
 .header {
   flex: 0 0 auto;
-  padding-bottom: 10px;
 }
 
 .header_bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 10%;
+  height: 15px;
   width: 100%;
 }
 
@@ -38,173 +37,89 @@ body, html {
 }
 
 .logo {
-  height: 25px;
-  width: 91px;
+  width: 120px;
+  aspect-ratio: 1;
 }
 
 .header_line {
-  width: 500px;
-  align-content: center;
+  width: 420px;
 }
 
 .content {
-  flex: 1 0 auto;
-  overflow: hidden;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 1000px;
   padding: 0 15px;
+  overflow: hidden;
 }
 
 .page_head1 {
-  font-size: 24px;
+  font-size: 30px;
   color: #1852FE;
-  font-weight: 700;
+  font-weight: 500;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .page_head3 {
   font-size: 18px;
   font-weight: 700;
   text-align: center;
-  margin: 20px auto;
+  margin: 15px auto;
 }
 
 .para {
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 17px;
+  font-weight: 400;
   line-height: 1.5;
+  margin: 0;
 }
 
 .chart-wrap {
-  height: 650px;
-  aspect-ratio: 1;
+  width: 100%;
+  max-width: 800px;
+  height: 550px;         
+  margin: 0 auto 20px auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  page-break-inside: avoid;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .spider_graph {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  display: block;
+  overflow: hidden;
 }
 
 .desc_graph {
   font-size: 14px;
+  margin: 0 auto;
+  line-height: 1.3;
   text-align: center;
+  width: 90%;
 }
 
 .exihibit {
   text-align: center;
   font-weight: 700;
+  margin: 10px 0;
+}
+
+.note {
+  font-size: 14px;
+  color: #7D7D7D;
+  text-align: center;
 }
 
 .footer {
   width: 100%;
+  margin: 15px auto;
   text-align: center;
+  font-style: 20px;
   font-weight: 500;
-  position: absolute;
-  bottom: 0;
-}
-
-.gradient-bar {
-  background: linear-gradient(to right, #1354FE, #B313FE);
-}
-
-.big-image-gradient-box {
-    position: relative;
-    width: 100%;
-    max-height: 250px;
-    overflow: hidden;
-}
-
-.big-image-bg {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    display: block;
-}
-
-.big-image-gradient {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: linear-gradient(to top, #29389B 20%, #3E01EC1A 100%);
-    z-index: 1;
-}
-
-.big-image-caption {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100;
-    bottom: 0;
-    color: #fff;
-    font-size: 24px;
-    font-weight: 500;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 30px;
-    font-style: italic;
-    z-index: 2;
-    line-height: 1.3;
-    text-shadow: 0 2px 8px rgba(41,56,155,0.2);
-    word-break: break-word;
-}
-
-.top-interest-card {
-  position: relative;
-  width: 200px;
-  height: 250px;
-  box-shadow: 0 2px 8px rgba(41,56,155,0.08);
-  padding: 0;
-}
-
-.interest-bg {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
-
-.interest-gradient {
-  position: absolute;
-  left: 0; right: 0; top: 0; bottom: 0;
-  background: linear-gradient(to top, #29389B 20%, #3E01EC1A 100%);
-  z-index: 1;
-}
-
-.interest-rank {
-  position: absolute;
-  top: 0;
-  left: -18px;
-  margin: 0;
-  padding: 0;
-  font-size: 220px;
-  font-weight: 500;
-  color: white;
-  z-index: 2;
-  font-family: "Inter", sans-serif;
-  text-shadow: 0 2px 8px rgba(41,56,155,0.15);
-  line-height: 0.7;
-}
-
-.interest-title {
-  position: absolute;
-  bottom: 18px;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  color: #fff;
-  font-size: 30px;
-  font-weight: 700;
-  z-index: 2;
-  font-family: 'Lato', Arial, Helvetica, sans-serif;
-  letter-spacing: 0.5px;
-  text-shadow: 0 2px 8px rgba(41,56,155,0.15);
 }
